--- a/src/main/webapp/WEB-INF/templates/main/goodbye.html
+++ b/src/main/webapp/WEB-INF/templates/main/goodbye.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Goodbye</title>
 </head>
 <body>
-<h1>Hello World!!!</h1>
+<h1>Goodbye!</h1>
+<a href="/hello">LogIn</a>
 </body>
 </html>
