--- a/src/main/webapp/WEB-INF/templates/people/show.html
+++ b/src/main/webapp/WEB-INF/templates/people/show.html
@@ -7,5 +7,11 @@
 <body>
 <p th:text="${person.getName()}">Name</p>
 <p th:text="${person.getId()}">Id</p>
+
+<a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
+
+<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+    <input type="submit" value="Delete"/>
+</form>
 </body>
 </html>
